lipu-pi-nasin-sewi: WIP

--- a/lipu-pi-nasin-sewi/41.md
+++ b/lipu-pi-nasin-sewi/41.md
@@ -10,7 +10,6 @@ sidebar:
       {:.kipisi-nav-sidebar}
 ---
 
-；上德若谷；太白若辱；广德若不足；建德若偷；质真若渝；大方无隅；大器晚成；大音希声；大象无形；道隐无名。夫唯道，善贷且成。
 {:.loseta}
 |:-:|-|-
 | 上士闻道 |  | When superior students hear of the Way
@@ -19,21 +18,21 @@ sidebar:
 | 若存若亡 |  | They sometimes keep it and sometimes lose it.
 | 下士闻道 |  | When inferior students hear of the Way
 | 大笑之 |  | They have a big laugh.
-| 不笑不足以为道 |  | But “not laughing” in itself is not sufficient to be called the Way, and therefore it is said:
-| 故建言有之 |  | The sparkling Way seems dark
-| 明道若昧 |  | Advancing in the Way seems like regression.
-| 进道若退 |  | Settling into the Way seems rough.
-| 夷道若纇 |  | True virtue is like a valley.
-|  |  | The immaculate seems humble.
-|  |  | Extensive virtue seems insufficient.
-|  |  | Established virtue seems deceptive.
-|  |  | The face of reality seems to change.
-|  |  | The great square has no corners.
-|  |  | Great ability takes a long time to perfect.
-|  |  | Great sound is hard to hear.
-|  |  | The great form has no shape.
-|  |  | The Way is hidden and nameless.
-|  |  | This is exactly why the Way is good at developing and perfecting.
+| 不笑不足以为道<wbr/>故建言有之 |  | But “not laughing” in itself is not sufficient to be called the Way, and therefore it is said:
+| 明道若昧 |  | The sparkling Way seems dark
+| 进道若退 |  | Advancing in the Way seems like regression.
+| 夷道若纇 |  | Settling into the Way seems rough.
+| 上德若谷 |  | True virtue is like a valley.
+| 太白若辱 |  | The immaculate seems humble.
+| 广德若不足 |  | Extensive virtue seems insufficient.
+| 建德若偷 |  | Established virtue seems deceptive.
+| 质真若渝 |  | The face of reality seems to change.
+| 大方无隅 |  | The great square has no corners.
+| 大器晚成 |  | Great ability takes a long time to perfect.
+| 大音希声 |  | Great sound is hard to hear.
+| 大象无形 |  | The great form has no shape.
+| 道隐无名 |  | The Way is hidden and nameless.
+| 夫唯道<wbr/>善贷且成 |  | This is exactly why the Way is good at developing and perfecting.
 
 {% include kipisi-nav.html num=41 %}
 
