--- a/lipu-pi-nasin-sewi/42.md
+++ b/lipu-pi-nasin-sewi/42.md
@@ -10,22 +10,21 @@ sidebar:
       {:.kipisi-nav-sidebar}
 ---
 
-道生一、一生二、二生三、三生万物。万物负阴而抱阳、冲气以为和。人之所恶、唯孤寡不穀、而王公以为称。故物或损之而益、或益之而损。人之所教、我亦教 之。强梁者不得其死。吾將以为教父。
-
 {:.loseta}
 |:-:|-|-
-|  |  | The Way produces one, one produces two.
-|  |  | The two produce the three and the three produce all things.
-|  |  | All things submit to yin and embrace yang.
-|  |  | They soften their energy to achieve harmony.
-|  |  | People hate to think of themselves as “orphan,”“lowly,” and “unworthy”
-|  |  | Yet the kings call themselves by these names.
-|  |  | Some lose and yet gain,
-|  |  | Others gain and yet lose.
-|  |  | That which is taught by the people
-|  |  | I also teach:
-|  |  | “The forceful do not choose their place of death.”
-|  |  | I regard this as the father of all teachings.
+| 道生一<wbr/>一生二                   | nasin sewi li mama e wan. wan ni li mama e tu.   | The Way produces one, one produces two.
+| 二生三<wbr/>三生万物                 | tu ni li mama e mute. mute ni li mama e ilo ale. | The two produce the three and the three produce all things.
+| 万物负阴而抱阳                       | ilo ale li _mama_ e kon In li _mama_ e kon An. | All things submit to yin and embrace yang.
+| 冲气以为和                           |  | They soften their energy to achieve harmony.
+| 人之所恶<wbr/>唯孤<wbr/>寡<wbr/>不谷 |  | People hate to think of themselves as “orphan,” “lowly,” and “unworthy”
+| 而王公以为称                         |  | Yet the kings call themselves by these names.
+| 故                                   |  | [Hence,]
+| 物或损之而益                         |  | Some lose and yet gain,
+| 或益之而损                           |  | Others gain and yet lose.
+| 人之所教                             |  | That which is taught by the people
+| 我亦教之                             |  | I also teach:
+| 强梁者不得其死                       |  | “The forceful do not choose their place of death.”
+| 吾将以为教父                         |  | I regard this as the father of all teachings.
 
 {% include kipisi-nav.html num=42 %}
 
