lipu-pi-nasin-sewi: WIP

--- a/lipu-pi-nasin-sewi/43.md
+++ b/lipu-pi-nasin-sewi/43.md
@@ -10,16 +10,14 @@ sidebar:
       {:.kipisi-nav-sidebar}
 ---
 
-天下之至柔、驰骋天下之至坚。无有入无间。吾是以知无为之有益。不言之教、无为之益、天下希及之。
-
 {:.loseta}
 |:-:|-|-
-|  |  | The softest thing in the world
-|  |  | Will overcome the hardest.
-|  |  | Non-being can enter where there is no space.
-|  |  | Therefore I know the benefit of unattached-action.
-|  |  | The wordless teaching and unattached-action
-|  |  | Are rarely seen.
+| 天下之至柔             |  | The softest thing in the world
+| 驰骋<wbr/>天下之至坚   |  | Will overcome the hardest.
+| 无有入无间             |  | Non-being can enter where there is no space.
+| 吾是以知无为之有益     |  | Therefore I know the benefit of unattached-action.
+| 不言之教<wbr/>无为之益 |  | The wordless teaching and unattached-action
+| 天下希及之             |  | Are rarely seen.
 
 {% include kipisi-nav.html num=43 %}
 
