--- a/lipu-pi-nasin-sewi/44.md
+++ b/lipu-pi-nasin-sewi/44.md
@@ -10,18 +10,16 @@ sidebar:
       {:.kipisi-nav-sidebar}
 ---
 
-名与身孰亲 身与货孰多。得与亡孰病。是故甚爱必大费、多藏必厚亡。知足不辱、知止不殆、可以长久。
-
 {:.loseta}
 |:-:|-|-
-|  |  | Which is dearer, fame or your life?
-|  |  | Which is greater, your life or possessions?
-|  |  | Which is more painful, gain or loss?
-|  |  | Therefore we always pay a great price for excessive love
-|  |  | And suffer deep loss for great accumulation.
-|  |  | Knowing what is enough, you will not be humiliated.
-|  |  | Knowing where to stop, you will not be imperiled
-|  |  | And can be long-lasting.
+| 名与身孰亲     |  | Which is dearer, fame or your life?
+| 身与货孰多     |  | Which is greater, your life or possessions?
+| 得与亡孰病     |  | Which is more painful, gain or loss?
+| 是故甚爱必大费 |  | Therefore we always pay a great price for excessive love
+| 多藏必厚亡     |  | And suffer deep loss for great accumulation.
+| 知足不辱       |  | Knowing what is enough, you will not be humiliated.
+| 知止不殆       |  | Knowing where to stop, you will not be imperiled
+| 可以长久       |  | And can be long-lasting.
 
 {% include kipisi-nav.html num=44 %}
 
