--- a/lipu-pi-nasin-sewi/45.md
+++ b/lipu-pi-nasin-sewi/45.md
@@ -10,17 +10,15 @@ sidebar:
       {:.kipisi-nav-sidebar}
 ---
 
-大成若缺、其用不弊。大盈若冲、其用不穷。大直若屈、大巧若拙、大辩若訥。躁胜寒、静胜热。淸静为天下正。
-
 {:.loseta}
 |:-:|-|-
-|  |  | Great perfection seems flawed, yet functions without a hitch.
-|  |  | Great fullness seems empty, yet functions without exhaustion.
-|  |  | Great straightness seems crooked,
-|  |  | Great skill seems clumsy,
-|  |  | Great eloquence seems stammering.
-|  |  | Excitement overcomes cold, stillness overcomes heat.
-|  |  | Clarity and stillness set everything right.
+| 大成若缺<wbr/>其用不弊 |  | Great perfection seems flawed, yet functions without a hitch.
+| 大盈若冲<wbr/>其用不穷 |  | Great fullness seems empty, yet functions without exhaustion.
+| 大直若屈               |  | Great straightness seems crooked,
+| 大巧若拙               |  | Great skill seems clumsy,
+| 大辩若讷               |  | Great eloquence seems stammering.
+| 躁胜寒静胜热           |  | Excitement overcomes cold, stillness overcomes heat.
+| 清静为天下正           |  | Clarity and stillness set everything right.
 
 {% include kipisi-nav.html num=45 %}
 
