--- a/lipu-pi-nasin-sewi/46.md
+++ b/lipu-pi-nasin-sewi/46.md
@@ -10,17 +10,15 @@ sidebar:
       {:.kipisi-nav-sidebar}
 ---
 
-天下有道、御走马以粪。天下无道、戎马生於郊。祸莫大於不知足、咎莫大於欲得。故知足之足 常足矣。
-
 {:.loseta}
 |:-:|-|-
-|  |  | When the Way prevails in the land
-|  |  | Fine horses leisurely graze and fertilize the ground.
-|  |  | When the Way is lacking in the land
-|  |  | War horses are bred outside the city.
-|  |  | There is no greater disaster as bad as not knowing what is enough.
-|  |  | No greater than not wanting more.
-|  |  | Therefore the sufficiency that comes from knowing what is enough is an eternal sufficiency.
+| 天下有道       |  | When the Way prevails in the land
+| 却走马以粪     |  | Fine horses leisurely graze and fertilize the ground.
+| 天下无道       |  | When the Way is lacking in the land
+| 戎马生于郊     |  | War horses are bred outside the city.
+| 祸莫大于不知足 |  | There is no greater disaster as bad as not knowing what is enough.
+| 咎莫大于欲得   |  | No greater than not wanting more.
+| 故知足之足<wbr/>常足矣 |  | Therefore the sufficiency that comes from knowing what is enough is an eternal sufficiency.
 
 {% include kipisi-nav.html num=46 %}
 
