--- a/lipu-pi-nasin-sewi/47.md
+++ b/lipu-pi-nasin-sewi/47.md
@@ -10,19 +10,17 @@ sidebar:
       {:.kipisi-nav-sidebar}
 ---
 
-不出户、知天下。不闚牖、见天道。其出弥远、其知弥少。是以圣人不行而知、不见而名、不为而成。
-
 {:.loseta}
 |:-:|-|-
-|  |  | Without going out the door, knowing everything,
-|  |  | Without peeking out the window shades, seeing the Way of Heaven.
-|  |  | The further you go, the less you know.
-|  |  | Hence the sage
-|  |  | Understands without having to go through the whole process.
-|  |  | Discerns [^3] without looking.
-|  |  | Is perfected without striving.
+| 不出户知天下 |  | Without going out the door, knowing everything,
+| 不闚牖见天道 |  | Without peeking out the window shades, seeing the Way of Heaven.
+| 其出弥远<wbr/>其知弥少 |  | The further you go, the less you know.
+| 是以圣人 |  | Hence the sage
+| 不行而知 |  | Understands without having to go through the whole process.
+| 不见而名 |  | Discerns [^1] without looking.
+| 不为而成 |  | Is perfected without striving.
 
-[^3]: The commentarial tradition reads 名 as meaning 明.
+[^1]: Miller: "The commentarial tradition reads 名 as meaning 明."
 
 {% include kipisi-nav.html num=47 %}
 
