lipu-pi-nasin-sewi: WIP replacing text

--- a/lipu-pi-nasin-sewi/49.md
+++ b/lipu-pi-nasin-sewi/49.md
@@ -10,19 +10,17 @@ sidebar:
       {:.kipisi-nav-sidebar}
 ---
 
-圣人无常心。以百姓心为心。善者吾善之、不善者吾亦善之。德善。信者吾信之、不信者吾亦信之。德信。圣人在天下、歙歙为天下浑其心。百姓皆注其耳目。圣人 皆孩之。
-
 {:.loseta}
 |:-:|-|-
-|  |  | The sage has no fixed mind,
-|  |  | She takes the mind of the people as her mind.
-|  |  | I treat the good as good, I also treat the evil as good.
-|  |  | This is true goodness.
-|  |  | I trust the trustworthy, I also trust the untrustworthy.
-|  |  | This is real trust.
-|  |  | When the sage lives with people, she harmonizes with them
-|  |  | And conceals her mind for them.
-|  |  | The sages treat them as their little children.
+| 圣人无常心     |  | The sage has no fixed mind,
+| 以百姓心为心   |  | She takes the mind of the people as her mind.
+| 善者吾善之<wbr/>不善者吾亦善之   |  | I treat the good as good, I also treat the evil as good.
+| 德善           |  | This is true goodness.
+| 信者吾信之<wbr/>不信者吾亦信之   |  | I trust the trustworthy, I also trust the untrustworthy.
+| 德信           |  | This is real trust.
+| 圣人在天下<wbr/>歙歙为天下浑其心 |  | When the sage lives with people, she harmonizes with them
+| 百姓皆注其耳目 |  | And conceals her mind for them.
+| 圣人皆孩之     |  | The sages treat them as their little children.
 
 {% include kipisi-nav.html num=49 %}
 
