--- a/lipu-pi-nasin-sewi/48.md
+++ b/lipu-pi-nasin-sewi/48.md
@@ -10,18 +10,16 @@ sidebar:
       {:.kipisi-nav-sidebar}
 ---
 
-为学日益、为道日损。损之又损、以至於无为。无为而无不为。取天下常以无事。及其有事、不足以取天下。
-
 {:.loseta}
 |:-:|-|-
-|  |  | In studying, each day something is gained.
-|  |  | In following the Way, each day something is lost.
-|  |  | Lost and again lost.
-|  |  | Until there is nothing left to do.
-|  |  | Not-doing, nothing is left undone.
-|  |  | You can possess the world by never manipulating it.
-|  |  | No matter how much you manipulate
-|  |  | You can never possess the world.
+| 为学日益       |  | In studying, each day something is gained.
+| 为道日损       |  | In following the Way, each day something is lost.
+| 损之又损       |  | Lost and again lost.
+| 以至于无为     |  | Until there is nothing left to do.
+| 无为而无不为   |  | Not-doing, nothing is left undone.
+| 取天下常以无事 |  | You can possess the world by never manipulating it.
+| 及其有事       |  | No matter how much you manipulate
+| 不足以取天下   |  | You can never possess the world.
 
 {% include kipisi-nav.html num=48 %}
 
